<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_ros2_control</name>
  <version>0.0.0</version>
  <description>Package for using ROS 2 control to use Spot's joint control API</description>
  <maintainer email="engineering@theaiinstitute.com">AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>spot_hardware_interface</depend>
  <depend>std_srvs</depend> <!-- <<< ENSURE THIS IS PRESENT -->
  <depend>spot_msgs</depend>
  <depend>bosdyn_api_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>proto2ros</depend> <!-- For pose_to_robot_command_translator -->


  <exec_depend>controller_manager</exec_depend>
  <exec_depend>spot_description</exec_depend>
  <exec_depend>spot_driver</exec_depend>
  <exec_depend>spot_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
